// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules | Input / Select Controlled 1`] = `
Array [
  .c12 {
  padding-left: 8px;
  padding-right: 8px;
}

.c4 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c7 {
  box-sizing: border-box;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
}

.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c10 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c13 {
  position: absolute;
  height: 1px;
  width: 1px;
  overflow: hidden;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

.c15 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 20px;
  height: 20px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c6 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c8 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c2 {
  width: 200px;
  display: inline-block;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
}

.c9 {
  position: relative;
  height: 40px;
  box-sizing: border-box;
  border: 1px solid #BCBCB6;
  background-color: #ffffff;
  box-shadow: 0 1px 3px rgba(0,0,0,0.03);
  font: inherit;
  font-size: inherit;
  line-height: inherit;
  color: inherit;
}

.c9:focus-within {
  border-color: #0046FF;
}

.c9.focus-within {
  border-color: #0046FF;
}

.c9:hover:not(:focus-within) {
  border-color: #4B4B46;
}

.c5 {
  width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c11 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  background: transparent;
  width: 100%;
  height: 100%;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 0;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  outline: 0;
  padding: 0;
  text-align: initial;
}

.c11,
.c11[type='button'],
.c11[type='reset'],
.c11[type='submit'] {
  -webkit-appearance: button;
}

.c11::-moz-focus-inner,
.c11[type='button']::-moz-focus-inner,
.c11[type='reset']::-moz-focus-inner,
.c11[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c11:-moz-focusring,
.c11[type='button']:-moz-focusring,
.c11[type='reset']:-moz-focusring,
.c11[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c14 {
  -webkit-transform: translateY(-50%) rotate(0);
  -ms-transform: translateY(-50%) rotate(0);
  transform: translateY(-50%) rotate(0);
  -webkit-transform-origin: center center;
  -ms-transform-origin: center center;
  transform-origin: center center;
  -webkit-transition: -webkit-transform 0.16s ease-out;
  -webkit-transition: transform 0.16s ease-out;
  transition: transform 0.16s ease-out;
  position: absolute;
  height: 8px;
  top: 50%;
  right: 4px;
  pointer-events: none;
}

.c0 {
  position: relative;
  display: inline-block;
}

<div
    className="c0"
  >
    <div
      className="c1"
    >
      <div
        className="c2"
      >
        <label>
          <div
            className="c3 c4"
          >
            <span
              className="c5 c6"
            >
              Can select only #2
              
            </span>
            <div
              className="c7"
            >
              <div
                className="c8"
                color={[Function]}
                type="secondary"
              >
                <div
                  className="c9 c1"
                >
                  <div
                    className="c10"
                  >
                    <span
                      className="c8"
                    >
                      <button
                        absolutePositioning={true}
                        aria-expanded="false"
                        aria-haspopup="listbox"
                        className="c11"
                        onClick={[Function]}
                        tabIndex={0}
                      >
                        <div
                          aria-hidden="true"
                          style={
                            Object {
                              "flex": 1,
                            }
                          }
                        >
                          <div
                            className="c12"
                          >
                            Select me
                          </div>
                        </div>
                      </button>
                      <div
                        className="c13"
                      >
                        Select me
                      </div>
                    </span>
                  </div>
                  <svg
                    aria-hidden="true"
                    className="c14 c15"
                    focusable="false"
                    preserveAspectRatio="xMidYMid meet"
                    role="presentation"
                    size={5}
                    viewBox="0 0 24 24"
                  >
                    <polygon
                      points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </label>
      </div>
    </div>
  </div>,
  .c1 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c0 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  background-color: #0046FF;
  padding: 4px 12px;
  min-height: 32px;
  color: #FFFFFF;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border: none;
  border-radius: 0;
  cursor: pointer;
}

.c0,
.c0[type='button'],
.c0[type='reset'],
.c0[type='submit'] {
  -webkit-appearance: button;
}

.c0::-moz-focus-inner,
.c0[type='button']::-moz-focus-inner,
.c0[type='reset']::-moz-focus-inner,
.c0[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c0:-moz-focusring,
.c0[type='button']:-moz-focusring,
.c0[type='reset']:-moz-focusring,
.c0[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c0:hover {
  background-color: hsl(223.5,100%,45%);
}

.c0:active {
  background-color: hsl(223.5,100%,40%);
}

.c0::before {
  content: '';
  display: block;
  border: 2px solid transparent;
  position: absolute;
  top: 0;
  left: 0;
  width: calc(100% - 4px);
  height: calc(100% - 4px);
}

<button
    className="c0"
    onClick={[Function]}
    type="button"
  >
    <span
      className="c1"
    >
      Select 1st
    </span>
  </button>,
]
`;

exports[`Storyshots Molecules | Input / Select Custom ListItem renderer 1`] = `
.c12 {
  padding-left: 8px;
  padding-right: 8px;
}

.c4 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c7 {
  box-sizing: border-box;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
}

.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c10 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c13 {
  position: absolute;
  height: 1px;
  width: 1px;
  overflow: hidden;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

.c15 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 20px;
  height: 20px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c6 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c8 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c2 {
  width: 200px;
  display: inline-block;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
}

.c9 {
  position: relative;
  height: 40px;
  box-sizing: border-box;
  border: 1px solid #BCBCB6;
  background-color: #ffffff;
  box-shadow: 0 1px 3px rgba(0,0,0,0.03);
  font: inherit;
  font-size: inherit;
  line-height: inherit;
  color: inherit;
}

.c9:focus-within {
  border-color: #0046FF;
}

.c9.focus-within {
  border-color: #0046FF;
}

.c9:hover:not(:focus-within) {
  border-color: #4B4B46;
}

.c5 {
  width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c11 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  background: transparent;
  width: 100%;
  height: 100%;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 0;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  outline: 0;
  padding: 0;
  text-align: initial;
}

.c11,
.c11[type='button'],
.c11[type='reset'],
.c11[type='submit'] {
  -webkit-appearance: button;
}

.c11::-moz-focus-inner,
.c11[type='button']::-moz-focus-inner,
.c11[type='reset']::-moz-focus-inner,
.c11[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c11:-moz-focusring,
.c11[type='button']:-moz-focusring,
.c11[type='reset']:-moz-focusring,
.c11[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c14 {
  -webkit-transform: translateY(-50%) rotate(0);
  -ms-transform: translateY(-50%) rotate(0);
  transform: translateY(-50%) rotate(0);
  -webkit-transform-origin: center center;
  -ms-transform-origin: center center;
  transform-origin: center center;
  -webkit-transition: -webkit-transform 0.16s ease-out;
  -webkit-transition: transform 0.16s ease-out;
  transition: transform 0.16s ease-out;
  position: absolute;
  height: 8px;
  top: 50%;
  right: 4px;
  pointer-events: none;
}

.c0 {
  position: relative;
  display: inline-block;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <label>
        <div
          className="c3 c4"
        >
          <span
            className="c5 c6"
          >
            Open me
            
          </span>
          <div
            className="c7"
          >
            <div
              className="c8"
              color={[Function]}
              type="secondary"
            >
              <div
                className="c9 c1"
              >
                <div
                  className="c10"
                >
                  <span
                    className="c8"
                  >
                    <button
                      absolutePositioning={true}
                      aria-expanded="false"
                      aria-haspopup="listbox"
                      className="c11"
                      onClick={[Function]}
                      tabIndex={0}
                    >
                      <div
                        aria-hidden="true"
                        style={
                          Object {
                            "flex": 1,
                          }
                        }
                      >
                        <div
                          className="c12"
                        >
                          Select account
                        </div>
                      </div>
                    </button>
                    <div
                      className="c13"
                    >
                      Select account
                    </div>
                  </span>
                </div>
                <svg
                  aria-hidden="true"
                  className="c14 c15"
                  focusable="false"
                  preserveAspectRatio="xMidYMid meet"
                  role="presentation"
                  size={5}
                  viewBox="0 0 24 24"
                >
                  <polygon
                    points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules | Input / Select Custom SelectedValue and ListItem renderer 1`] = `
.c13 {
  padding-left: 8px;
  padding-right: 32px;
}

.c4 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c7 {
  box-sizing: border-box;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
}

.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c10 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c14 {
  position: absolute;
  height: 1px;
  width: 1px;
  overflow: hidden;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

.c16 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 20px;
  height: 20px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c6 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c8 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c2 {
  width: 200px;
  display: inline-block;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
}

.c9 {
  position: relative;
  height: 40px;
  box-sizing: border-box;
  border: 1px solid #BCBCB6;
  background-color: #ffffff;
  box-shadow: 0 1px 3px rgba(0,0,0,0.03);
  font: inherit;
  font-size: inherit;
  line-height: inherit;
  color: inherit;
}

.c9:focus-within {
  border-color: #0046FF;
}

.c9.focus-within {
  border-color: #0046FF;
}

.c9:hover:not(:focus-within) {
  border-color: #4B4B46;
}

.c5 {
  width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c11 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  background: transparent;
  width: 100%;
  height: 100%;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 0;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  outline: 0;
  padding: 0;
  text-align: initial;
}

.c11,
.c11[type='button'],
.c11[type='reset'],
.c11[type='submit'] {
  -webkit-appearance: button;
}

.c11::-moz-focus-inner,
.c11[type='button']::-moz-focus-inner,
.c11[type='reset']::-moz-focus-inner,
.c11[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c11:-moz-focusring,
.c11[type='button']:-moz-focusring,
.c11[type='reset']:-moz-focusring,
.c11[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c15 {
  -webkit-transform: translateY(-50%) rotate(0);
  -ms-transform: translateY(-50%) rotate(0);
  transform: translateY(-50%) rotate(0);
  -webkit-transform-origin: center center;
  -ms-transform-origin: center center;
  transform-origin: center center;
  -webkit-transition: -webkit-transform 0.16s ease-out;
  -webkit-transition: transform 0.16s ease-out;
  transition: transform 0.16s ease-out;
  position: absolute;
  height: 8px;
  top: 50%;
  right: 4px;
  pointer-events: none;
}

.c0 {
  position: relative;
  display: inline-block;
}

.c12 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <label>
        <div
          className="c3 c4"
        >
          <span
            className="c5 c6"
          >
            User account
            
          </span>
          <div
            className="c7"
          >
            <div
              className="c8"
              color={[Function]}
              type="secondary"
            >
              <div
                className="c9 c1"
              >
                <div
                  className="c10"
                >
                  <span
                    className="c8"
                  >
                    <button
                      absolutePositioning={true}
                      aria-expanded="false"
                      aria-haspopup="listbox"
                      className="c11"
                      onClick={[Function]}
                      tabIndex={0}
                    >
                      <div
                        aria-hidden="true"
                        style={
                          Object {
                            "flex": 1,
                          }
                        }
                      >
                        <div
                          className="c12 c13"
                        >
                          Select account
                        </div>
                      </div>
                    </button>
                    <div
                      className="c14"
                    >
                      Select account
                    </div>
                  </span>
                </div>
                <svg
                  aria-hidden="true"
                  className="c15 c16"
                  focusable="false"
                  preserveAspectRatio="xMidYMid meet"
                  role="presentation"
                  size={5}
                  viewBox="0 0 24 24"
                >
                  <polygon
                    points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules | Input / Select Custom SelectedValue renderer 1`] = `
.c13 {
  padding-left: 8px;
  padding-right: 32px;
}

.c4 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c7 {
  box-sizing: border-box;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
}

.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c10 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c14 {
  position: absolute;
  height: 1px;
  width: 1px;
  overflow: hidden;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

.c16 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 20px;
  height: 20px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c6 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c8 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c2 {
  width: 200px;
  display: inline-block;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
}

.c9 {
  position: relative;
  height: 40px;
  box-sizing: border-box;
  border: 1px solid #BCBCB6;
  background-color: #ffffff;
  box-shadow: 0 1px 3px rgba(0,0,0,0.03);
  font: inherit;
  font-size: inherit;
  line-height: inherit;
  color: inherit;
}

.c9:focus-within {
  border-color: #0046FF;
}

.c9.focus-within {
  border-color: #0046FF;
}

.c9:hover:not(:focus-within) {
  border-color: #4B4B46;
}

.c5 {
  width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c11 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  background: transparent;
  width: 100%;
  height: 100%;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 0;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  outline: 0;
  padding: 0;
  text-align: initial;
}

.c11,
.c11[type='button'],
.c11[type='reset'],
.c11[type='submit'] {
  -webkit-appearance: button;
}

.c11::-moz-focus-inner,
.c11[type='button']::-moz-focus-inner,
.c11[type='reset']::-moz-focus-inner,
.c11[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c11:-moz-focusring,
.c11[type='button']:-moz-focusring,
.c11[type='reset']:-moz-focusring,
.c11[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c15 {
  -webkit-transform: translateY(-50%) rotate(0);
  -ms-transform: translateY(-50%) rotate(0);
  transform: translateY(-50%) rotate(0);
  -webkit-transform-origin: center center;
  -ms-transform-origin: center center;
  transform-origin: center center;
  -webkit-transition: -webkit-transform 0.16s ease-out;
  -webkit-transition: transform 0.16s ease-out;
  transition: transform 0.16s ease-out;
  position: absolute;
  height: 8px;
  top: 50%;
  right: 4px;
  pointer-events: none;
}

.c0 {
  position: relative;
  display: inline-block;
}

.c12 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <label>
        <div
          className="c3 c4"
        >
          <span
            className="c5 c6"
          >
            Select something
            
          </span>
          <div
            className="c7"
          >
            <div
              className="c8"
              color={[Function]}
              type="secondary"
            >
              <div
                className="c9 c1"
              >
                <div
                  className="c10"
                >
                  <span
                    className="c8"
                  >
                    <button
                      absolutePositioning={true}
                      aria-expanded="false"
                      aria-haspopup="listbox"
                      className="c11"
                      onClick={[Function]}
                      tabIndex={0}
                    >
                      <div
                        aria-hidden="true"
                        style={
                          Object {
                            "flex": 1,
                          }
                        }
                      >
                        <div
                          className="c12 c13"
                        >
                          Select account
                        </div>
                      </div>
                    </button>
                    <div
                      className="c14"
                    >
                      Select account
                    </div>
                  </span>
                </div>
                <svg
                  aria-hidden="true"
                  className="c15 c16"
                  focusable="false"
                  preserveAspectRatio="xMidYMid meet"
                  role="presentation"
                  size={5}
                  viewBox="0 0 24 24"
                >
                  <polygon
                    points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules | Input / Select Default 1`] = `
.c12 {
  padding-left: 8px;
  padding-right: 8px;
}

.c4 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c7 {
  box-sizing: border-box;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
}

.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c10 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c13 {
  position: absolute;
  height: 1px;
  width: 1px;
  overflow: hidden;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

.c15 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 20px;
  height: 20px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c6 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c8 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c2 {
  width: 200px;
  display: inline-block;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
}

.c9 {
  position: relative;
  height: 40px;
  box-sizing: border-box;
  border: 1px solid #BCBCB6;
  background-color: #ffffff;
  box-shadow: 0 1px 3px rgba(0,0,0,0.03);
  font: inherit;
  font-size: inherit;
  line-height: inherit;
  color: inherit;
}

.c9:focus-within {
  border-color: #0046FF;
}

.c9.focus-within {
  border-color: #0046FF;
}

.c9:hover:not(:focus-within) {
  border-color: #4B4B46;
}

.c5 {
  width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c11 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  background: transparent;
  width: 100%;
  height: 100%;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 0;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  outline: 0;
  padding: 0;
  text-align: initial;
}

.c11,
.c11[type='button'],
.c11[type='reset'],
.c11[type='submit'] {
  -webkit-appearance: button;
}

.c11::-moz-focus-inner,
.c11[type='button']::-moz-focus-inner,
.c11[type='reset']::-moz-focus-inner,
.c11[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c11:-moz-focusring,
.c11[type='button']:-moz-focusring,
.c11[type='reset']:-moz-focusring,
.c11[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c14 {
  -webkit-transform: translateY(-50%) rotate(0);
  -ms-transform: translateY(-50%) rotate(0);
  transform: translateY(-50%) rotate(0);
  -webkit-transform-origin: center center;
  -ms-transform-origin: center center;
  transform-origin: center center;
  -webkit-transition: -webkit-transform 0.16s ease-out;
  -webkit-transition: transform 0.16s ease-out;
  transition: transform 0.16s ease-out;
  position: absolute;
  height: 8px;
  top: 50%;
  right: 4px;
  pointer-events: none;
}

.c0 {
  position: relative;
  display: inline-block;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <label>
        <div
          className="c3 c4"
        >
          <span
            className="c5 c6"
          >
            User account
            
          </span>
          <div
            className="c7"
          >
            <div
              className="c8"
              color={[Function]}
              type="secondary"
            >
              <div
                className="c9 c1"
              >
                <div
                  className="c10"
                >
                  <span
                    className="c8"
                  >
                    <button
                      absolutePositioning={true}
                      aria-expanded="false"
                      aria-haspopup="listbox"
                      className="c11"
                      onClick={[Function]}
                      tabIndex={0}
                    >
                      <div
                        aria-hidden="true"
                        style={
                          Object {
                            "flex": 1,
                          }
                        }
                      >
                        <div
                          className="c12"
                        >
                          Select account
                        </div>
                      </div>
                    </button>
                    <div
                      className="c13"
                    >
                      Select account
                    </div>
                  </span>
                </div>
                <svg
                  aria-hidden="true"
                  className="c14 c15"
                  focusable="false"
                  preserveAspectRatio="xMidYMid meet"
                  role="presentation"
                  size={5}
                  viewBox="0 0 24 24"
                >
                  <polygon
                    points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules | Input / Select Default variations 1`] = `
.c15 {
  padding-left: 8px;
  padding-right: 8px;
}

.c7 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c10 {
  box-sizing: border-box;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
}

.c4 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c13 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c16 {
  position: absolute;
  height: 1px;
  width: 1px;
  overflow: hidden;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

.c18 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 20px;
  height: 20px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c9 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c11 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c22 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #FF1900;
  margin: 0;
  font-weight: 400;
  font-size: 12px;
  line-height: 1.3333333333333333;
}

.c24 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 12px;
  line-height: 1.3333333333333333;
}

.c5 {
  width: 200px;
  display: inline-block;
}

.c21 {
  line-height: 17px;
  display: inline-block;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
}

.c23 {
  position: relative;
  height: 40px;
  box-sizing: border-box;
  border: 1px solid #BCBCB6;
  background-color: #ffffff;
  box-shadow: 0 1px 3px rgba(0,0,0,0.03);
  font: inherit;
  font-size: inherit;
  line-height: inherit;
  color: inherit;
}

.c23:focus-within {
  border-color: #0046FF;
}

.c23.focus-within {
  border-color: #0046FF;
}

.c23:hover:not(:focus-within) {
  border-color: #4B4B46;
}

.c19 {
  position: relative;
  height: 40px;
  box-sizing: border-box;
  border: 1px solid #FF1900;
  background-color: #ffffff;
  box-shadow: 0 1px 3px rgba(0,0,0,0.03);
  font: inherit;
  font-size: inherit;
  line-height: inherit;
  color: inherit;
}

.c19:focus-within {
  border-color: #0046FF;
}

.c19.focus-within {
  border-color: #0046FF;
}

.c19:hover:not(:focus-within) {
  border-color: #4B4B46;
}

.c12 {
  position: relative;
  height: 40px;
  box-sizing: border-box;
  border: 1px solid #BCBCB6;
  background-color: #ffffff;
  box-shadow: 0 1px 3px rgba(0,0,0,0.03);
  font: inherit;
  font-size: inherit;
  line-height: inherit;
  color: inherit;
}

.c12:focus-within {
  border-color: #0046FF;
}

.c12.focus-within {
  border-color: #0046FF;
}

.c25 {
  position: relative;
  height: 40px;
  box-sizing: border-box;
  border: 1px solid #00D200;
  background-color: #ffffff;
  box-shadow: 0 1px 3px rgba(0,0,0,0.03);
  font: inherit;
  font-size: inherit;
  line-height: inherit;
  color: inherit;
}

.c25:focus-within {
  border-color: #0046FF;
}

.c25.focus-within {
  border-color: #0046FF;
}

.c25:hover:not(:focus-within) {
  border-color: #4B4B46;
}

.c8 {
  width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c20 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  background: transparent;
  width: 100%;
  height: 100%;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 0;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  outline: 0;
  padding: 0;
  text-align: initial;
}

.c20,
.c20[type='button'],
.c20[type='reset'],
.c20[type='submit'] {
  -webkit-appearance: button;
}

.c20::-moz-focus-inner,
.c20[type='button']::-moz-focus-inner,
.c20[type='reset']::-moz-focus-inner,
.c20[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c20:-moz-focusring,
.c20[type='button']:-moz-focusring,
.c20[type='reset']:-moz-focusring,
.c20[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c14 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  background: #EBEBE8;
  width: 100%;
  height: 100%;
  cursor: not-allowed;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 0;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  outline: 0;
  padding: 0;
  text-align: initial;
}

.c14,
.c14[type='button'],
.c14[type='reset'],
.c14[type='submit'] {
  -webkit-appearance: button;
}

.c14::-moz-focus-inner,
.c14[type='button']::-moz-focus-inner,
.c14[type='reset']::-moz-focus-inner,
.c14[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c14:-moz-focusring,
.c14[type='button']:-moz-focusring,
.c14[type='reset']:-moz-focusring,
.c14[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c17 {
  -webkit-transform: translateY(-50%) rotate(0);
  -ms-transform: translateY(-50%) rotate(0);
  transform: translateY(-50%) rotate(0);
  -webkit-transform-origin: center center;
  -ms-transform-origin: center center;
  transform-origin: center center;
  -webkit-transition: -webkit-transform 0.16s ease-out;
  -webkit-transition: transform 0.16s ease-out;
  transition: transform 0.16s ease-out;
  position: absolute;
  height: 8px;
  top: 50%;
  right: 4px;
  pointer-events: none;
}

.c3 {
  position: relative;
  display: inline-block;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border: 0px;
}

.c0 > * {
  padding: 0px;
  width: 100%;
  box-sizing: border-box;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  border: 1px solid #eee;
}

.c1 > * {
  padding: 20px;
  width: 100%;
  box-sizing: border-box;
}

.c2 {
  border-right: 1px solid #eee;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

<div
  className="c0"
  direction="column"
>
  <div
    className="c1"
    direction="row"
  >
    <div
      className="c2"
    >
      Disabled
    </div>
    <div>
      <div
        className="c3"
      >
        <div
          className="c4"
        >
          <div
            className="c5"
          >
            <label>
              <div
                className="c6 c7"
              >
                <span
                  className="c8 c9"
                >
                  User account
                  
                </span>
                <div
                  className="c10"
                >
                  <div
                    className="c11"
                    color={[Function]}
                    type="secondary"
                  >
                    <div
                      className="c12 c4"
                    >
                      <div
                        className="c13"
                      >
                        <span
                          className="c11"
                        >
                          <button
                            absolutePositioning={true}
                            aria-expanded="false"
                            aria-haspopup="listbox"
                            className="c14"
                            disabled={true}
                            onClick={[Function]}
                            tabIndex={0}
                          >
                            <div
                              aria-hidden="true"
                              style={
                                Object {
                                  "flex": 1,
                                }
                              }
                            >
                              <div
                                className="c15"
                              >
                                Select account
                              </div>
                            </div>
                          </button>
                          <div
                            className="c16"
                          >
                            Select account
                          </div>
                        </span>
                      </div>
                      <svg
                        aria-hidden="true"
                        className="c17 c18"
                        focusable="false"
                        preserveAspectRatio="xMidYMid meet"
                        role="presentation"
                        size={5}
                        viewBox="0 0 24 24"
                      >
                        <polygon
                          points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </label>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="c1"
    direction="row"
  >
    <div
      className="c2"
    >
      Error
    </div>
    <div>
      <div
        className="c3"
      >
        <div
          className="c4"
        >
          <div
            className="c5"
          >
            <label>
              <div
                className="c6 c7"
              >
                <span
                  className="c8 c9"
                >
                  User account
                  
                </span>
                <div
                  className="c10"
                >
                  <div
                    className="c11"
                    color={[Function]}
                    type="secondary"
                  >
                    <div
                      className="c19 c4"
                    >
                      <div
                        className="c13"
                      >
                        <span
                          className="c11"
                        >
                          <button
                            absolutePositioning={true}
                            aria-expanded="false"
                            aria-haspopup="listbox"
                            className="c20"
                            onClick={[Function]}
                            tabIndex={0}
                          >
                            <div
                              aria-hidden="true"
                              style={
                                Object {
                                  "flex": 1,
                                }
                              }
                            >
                              <div
                                className="c15"
                              >
                                Select account
                              </div>
                            </div>
                          </button>
                          <div
                            className="c16"
                          >
                            Select account
                          </div>
                        </span>
                      </div>
                      <svg
                        aria-hidden="true"
                        className="c17 c18"
                        focusable="false"
                        preserveAspectRatio="xMidYMid meet"
                        role="presentation"
                        size={5}
                        viewBox="0 0 24 24"
                      >
                        <polygon
                          points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </label>
            <span>
              <span
                className="c21 c22"
              >
                <div
                  className="c16"
                >
                  Error: 
                </div>
                Some error
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="c1"
    direction="row"
  >
    <div
      className="c2"
    >
      Info
    </div>
    <div>
      <div
        className="c3"
      >
        <div
          className="c4"
        >
          <div
            className="c5"
          >
            <label>
              <div
                className="c6 c7"
              >
                <span
                  className="c8 c9"
                >
                  User account
                  
                </span>
                <div
                  className="c10"
                >
                  <div
                    className="c11"
                    color={[Function]}
                    type="secondary"
                  >
                    <div
                      className="c23 c4"
                    >
                      <div
                        className="c13"
                      >
                        <span
                          className="c11"
                        >
                          <button
                            absolutePositioning={true}
                            aria-expanded="false"
                            aria-haspopup="listbox"
                            className="c20"
                            onClick={[Function]}
                            tabIndex={0}
                          >
                            <div
                              aria-hidden="true"
                              style={
                                Object {
                                  "flex": 1,
                                }
                              }
                            >
                              <div
                                className="c15"
                              >
                                Select account
                              </div>
                            </div>
                          </button>
                          <div
                            className="c16"
                          >
                            Select account
                          </div>
                        </span>
                      </div>
                      <svg
                        aria-hidden="true"
                        className="c17 c18"
                        focusable="false"
                        preserveAspectRatio="xMidYMid meet"
                        role="presentation"
                        size={5}
                        viewBox="0 0 24 24"
                      >
                        <polygon
                          points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </label>
            <span>
              <span
                className="c21 c24"
              >
                Some extra info
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="c1"
    direction="row"
  >
    <div
      className="c2"
    >
      Success
    </div>
    <div>
      <div
        className="c3"
      >
        <div
          className="c4"
        >
          <div
            className="c5"
          >
            <label>
              <div
                className="c6 c7"
              >
                <span
                  className="c8 c9"
                >
                  User account
                  
                </span>
                <div
                  className="c10"
                >
                  <div
                    className="c11"
                    color={[Function]}
                    type="secondary"
                  >
                    <div
                      className="c25 c4"
                      success={true}
                    >
                      <div
                        className="c13"
                      >
                        <span
                          className="c11"
                        >
                          <button
                            absolutePositioning={true}
                            aria-expanded="false"
                            aria-haspopup="listbox"
                            className="c20"
                            onClick={[Function]}
                            tabIndex={0}
                          >
                            <div
                              aria-hidden="true"
                              style={
                                Object {
                                  "flex": 1,
                                }
                              }
                            >
                              <div
                                className="c15"
                              >
                                Select account
                              </div>
                            </div>
                          </button>
                          <div
                            className="c16"
                          >
                            Select account
                          </div>
                        </span>
                      </div>
                      <svg
                        aria-hidden="true"
                        className="c17 c18"
                        focusable="false"
                        preserveAspectRatio="xMidYMid meet"
                        role="presentation"
                        size={5}
                        viewBox="0 0 24 24"
                      >
                        <polygon
                          points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </label>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules | Input / Select Link with dropdown and search box 1`] = `
.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c6 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -4px;
  margin-right: -4px;
}

.c6 > * {
  padding-left: 4px;
  padding-right: 4px;
}

.c6 > *:not(:first-child) {
  padding-top: 0;
}

.c8 {
  position: absolute;
  height: 1px;
  width: 1px;
  overflow: hidden;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

.c7 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 20px;
  height: 20px;
  fill: #0046FF;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: inline-block;
  vertical-align: middle;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c4 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  background: transparent;
  width: 100%;
  height: 100%;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 0;
}

.c4,
.c4[type='button'],
.c4[type='reset'],
.c4[type='submit'] {
  -webkit-appearance: button;
}

.c4::-moz-focus-inner,
.c4[type='button']::-moz-focus-inner,
.c4[type='reset']::-moz-focus-inner,
.c4[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c4:-moz-focusring,
.c4[type='button']:-moz-focusring,
.c4[type='reset']:-moz-focusring,
.c4[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c0 {
  position: relative;
  display: inline-block;
}

.c5 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  display: inline;
  padding: 0;
  color: #0046FF;
  background: none;
  cursor: pointer;
  border: none;
  margin: 0;
  padding: 0;
  width: auto;
  overflow: visible;
  background: transparent;
  -webkit-font-smoothing: inherit;
  -moz-osx-font-smoothing: inherit;
  -webkit-appearance: none !important;
  cursor: pointer;
  font-weight: inherit;
}

.c5,
.c5[type='button'],
.c5[type='reset'],
.c5[type='submit'] {
  -webkit-appearance: button;
}

.c5::-moz-focus-inner,
.c5[type='button']::-moz-focus-inner,
.c5[type='reset']::-moz-focus-inner,
.c5[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c5:-moz-focusring,
.c5[type='button']:-moz-focusring,
.c5[type='reset']:-moz-focusring,
.c5[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c5:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <span
        className="c3"
      >
        <button
          absolutePositioning={false}
          aria-expanded="false"
          aria-haspopup="listbox"
          className="c4"
          onClick={[Function]}
          tabIndex={0}
        >
          <div
            aria-hidden="true"
            style={
              Object {
                "flex": 1,
              }
            }
          >
            <div
              className="c5"
            >
              <div
                className="c6"
              >
                <svg
                  aria-hidden="true"
                  className="c7"
                  focusable="false"
                  preserveAspectRatio="xMidYMid meet"
                  role="presentation"
                  size={5}
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M12,0 C18.627417,0 24,5.372583 24,12 C24,18.627417 18.627417,24 12,24 C5.372583,24 0,18.627417 0,12 C0,5.372583 5.372583,0 12,0 Z M12,2 C6.4771525,2 2,6.4771525 2,12 C2,17.5228475 6.4771525,22 12,22 C17.5228475,22 22,17.5228475 22,12 C22,6.4771525 17.5228475,2 12,2 Z M13,4 L13,11 L20,11 L20,13 L13,13 L13,20 L11,20 L11,12.999 L4,13 L4,11 L11,10.999 L11,4 L13,4 Z"
                  />
                </svg>
                Select account
              </div>
            </div>
          </div>
        </button>
        <div
          className="c8"
        >
          Select account
        </div>
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules | Input / Select Size = \`s\` variations 1`] = `
.c15 {
  padding-left: 8px;
  padding-right: 8px;
}

.c7 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c10 {
  box-sizing: border-box;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
}

.c4 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c13 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c16 {
  position: absolute;
  height: 1px;
  width: 1px;
  overflow: hidden;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

.c18 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 20px;
  height: 20px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c9 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c11 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c22 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #FF1900;
  margin: 0;
  font-weight: 400;
  font-size: 12px;
  line-height: 1.3333333333333333;
}

.c24 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 12px;
  line-height: 1.3333333333333333;
}

.c5 {
  width: 200px;
  display: inline-block;
}

.c21 {
  line-height: 17px;
  display: inline-block;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
}

.c12 {
  position: relative;
  height: 32px;
  box-sizing: border-box;
  border: 1px solid #BCBCB6;
  background-color: #ffffff;
  box-shadow: 0 1px 3px rgba(0,0,0,0.03);
  font: inherit;
  font-size: inherit;
  line-height: inherit;
  color: inherit;
}

.c12:focus-within {
  border-color: #0046FF;
}

.c12.focus-within {
  border-color: #0046FF;
}

.c19 {
  position: relative;
  height: 32px;
  box-sizing: border-box;
  border: 1px solid #FF1900;
  background-color: #ffffff;
  box-shadow: 0 1px 3px rgba(0,0,0,0.03);
  font: inherit;
  font-size: inherit;
  line-height: inherit;
  color: inherit;
}

.c19:focus-within {
  border-color: #0046FF;
}

.c19.focus-within {
  border-color: #0046FF;
}

.c19:hover:not(:focus-within) {
  border-color: #4B4B46;
}

.c23 {
  position: relative;
  height: 32px;
  box-sizing: border-box;
  border: 1px solid #BCBCB6;
  background-color: #ffffff;
  box-shadow: 0 1px 3px rgba(0,0,0,0.03);
  font: inherit;
  font-size: inherit;
  line-height: inherit;
  color: inherit;
}

.c23:focus-within {
  border-color: #0046FF;
}

.c23.focus-within {
  border-color: #0046FF;
}

.c23:hover:not(:focus-within) {
  border-color: #4B4B46;
}

.c25 {
  position: relative;
  height: 32px;
  box-sizing: border-box;
  border: 1px solid #00D200;
  background-color: #ffffff;
  box-shadow: 0 1px 3px rgba(0,0,0,0.03);
  font: inherit;
  font-size: inherit;
  line-height: inherit;
  color: inherit;
}

.c25:focus-within {
  border-color: #0046FF;
}

.c25.focus-within {
  border-color: #0046FF;
}

.c25:hover:not(:focus-within) {
  border-color: #4B4B46;
}

.c8 {
  width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c20 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  background: transparent;
  width: 100%;
  height: 100%;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 0;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  outline: 0;
  padding: 0;
  text-align: initial;
}

.c20,
.c20[type='button'],
.c20[type='reset'],
.c20[type='submit'] {
  -webkit-appearance: button;
}

.c20::-moz-focus-inner,
.c20[type='button']::-moz-focus-inner,
.c20[type='reset']::-moz-focus-inner,
.c20[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c20:-moz-focusring,
.c20[type='button']:-moz-focusring,
.c20[type='reset']:-moz-focusring,
.c20[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c14 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  background: #EBEBE8;
  width: 100%;
  height: 100%;
  cursor: not-allowed;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 0;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  outline: 0;
  padding: 0;
  text-align: initial;
}

.c14,
.c14[type='button'],
.c14[type='reset'],
.c14[type='submit'] {
  -webkit-appearance: button;
}

.c14::-moz-focus-inner,
.c14[type='button']::-moz-focus-inner,
.c14[type='reset']::-moz-focus-inner,
.c14[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c14:-moz-focusring,
.c14[type='button']:-moz-focusring,
.c14[type='reset']:-moz-focusring,
.c14[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c17 {
  -webkit-transform: translateY(-50%) rotate(0);
  -ms-transform: translateY(-50%) rotate(0);
  transform: translateY(-50%) rotate(0);
  -webkit-transform-origin: center center;
  -ms-transform-origin: center center;
  transform-origin: center center;
  -webkit-transition: -webkit-transform 0.16s ease-out;
  -webkit-transition: transform 0.16s ease-out;
  transition: transform 0.16s ease-out;
  position: absolute;
  height: 8px;
  top: 50%;
  right: 4px;
  pointer-events: none;
}

.c3 {
  position: relative;
  display: inline-block;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border: 0px;
}

.c0 > * {
  padding: 0px;
  width: 100%;
  box-sizing: border-box;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  border: 1px solid #eee;
}

.c1 > * {
  padding: 20px;
  width: 100%;
  box-sizing: border-box;
}

.c2 {
  border-right: 1px solid #eee;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

<div
  className="c0"
  direction="column"
>
  <div
    className="c1"
    direction="row"
  >
    <div
      className="c2"
    >
      Disabled
    </div>
    <div>
      <div
        className="c3"
      >
        <div
          className="c4"
        >
          <div
            className="c5"
          >
            <label>
              <div
                className="c6 c7"
              >
                <span
                  className="c8 c9"
                >
                  User account
                  
                </span>
                <div
                  className="c10"
                >
                  <div
                    className="c11"
                    color={[Function]}
                    type="secondary"
                  >
                    <div
                      className="c12 c4"
                    >
                      <div
                        className="c13"
                      >
                        <span
                          className="c11"
                        >
                          <button
                            absolutePositioning={true}
                            aria-expanded="false"
                            aria-haspopup="listbox"
                            className="c14"
                            disabled={true}
                            onClick={[Function]}
                            tabIndex={0}
                          >
                            <div
                              aria-hidden="true"
                              style={
                                Object {
                                  "flex": 1,
                                }
                              }
                            >
                              <div
                                className="c15"
                              >
                                Select account
                              </div>
                            </div>
                          </button>
                          <div
                            className="c16"
                          >
                            Select account
                          </div>
                        </span>
                      </div>
                      <svg
                        aria-hidden="true"
                        className="c17 c18"
                        focusable="false"
                        preserveAspectRatio="xMidYMid meet"
                        role="presentation"
                        size={5}
                        viewBox="0 0 24 24"
                      >
                        <polygon
                          points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </label>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="c1"
    direction="row"
  >
    <div
      className="c2"
    >
      Error
    </div>
    <div>
      <div
        className="c3"
      >
        <div
          className="c4"
        >
          <div
            className="c5"
          >
            <label>
              <div
                className="c6 c7"
              >
                <span
                  className="c8 c9"
                >
                  User account
                  
                </span>
                <div
                  className="c10"
                >
                  <div
                    className="c11"
                    color={[Function]}
                    type="secondary"
                  >
                    <div
                      className="c19 c4"
                    >
                      <div
                        className="c13"
                      >
                        <span
                          className="c11"
                        >
                          <button
                            absolutePositioning={true}
                            aria-expanded="false"
                            aria-haspopup="listbox"
                            className="c20"
                            onClick={[Function]}
                            tabIndex={0}
                          >
                            <div
                              aria-hidden="true"
                              style={
                                Object {
                                  "flex": 1,
                                }
                              }
                            >
                              <div
                                className="c15"
                              >
                                Select account
                              </div>
                            </div>
                          </button>
                          <div
                            className="c16"
                          >
                            Select account
                          </div>
                        </span>
                      </div>
                      <svg
                        aria-hidden="true"
                        className="c17 c18"
                        focusable="false"
                        preserveAspectRatio="xMidYMid meet"
                        role="presentation"
                        size={5}
                        viewBox="0 0 24 24"
                      >
                        <polygon
                          points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </label>
            <span>
              <span
                className="c21 c22"
              >
                <div
                  className="c16"
                >
                  Error: 
                </div>
                Some error
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="c1"
    direction="row"
  >
    <div
      className="c2"
    >
      Info
    </div>
    <div>
      <div
        className="c3"
      >
        <div
          className="c4"
        >
          <div
            className="c5"
          >
            <label>
              <div
                className="c6 c7"
              >
                <span
                  className="c8 c9"
                >
                  User account
                  
                </span>
                <div
                  className="c10"
                >
                  <div
                    className="c11"
                    color={[Function]}
                    type="secondary"
                  >
                    <div
                      className="c23 c4"
                    >
                      <div
                        className="c13"
                      >
                        <span
                          className="c11"
                        >
                          <button
                            absolutePositioning={true}
                            aria-expanded="false"
                            aria-haspopup="listbox"
                            className="c20"
                            onClick={[Function]}
                            tabIndex={0}
                          >
                            <div
                              aria-hidden="true"
                              style={
                                Object {
                                  "flex": 1,
                                }
                              }
                            >
                              <div
                                className="c15"
                              >
                                Select account
                              </div>
                            </div>
                          </button>
                          <div
                            className="c16"
                          >
                            Select account
                          </div>
                        </span>
                      </div>
                      <svg
                        aria-hidden="true"
                        className="c17 c18"
                        focusable="false"
                        preserveAspectRatio="xMidYMid meet"
                        role="presentation"
                        size={5}
                        viewBox="0 0 24 24"
                      >
                        <polygon
                          points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </label>
            <span>
              <span
                className="c21 c24"
              >
                Some extra info
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="c1"
    direction="row"
  >
    <div
      className="c2"
    >
      Success
    </div>
    <div>
      <div
        className="c3"
      >
        <div
          className="c4"
        >
          <div
            className="c5"
          >
            <label>
              <div
                className="c6 c7"
              >
                <span
                  className="c8 c9"
                >
                  User account
                  
                </span>
                <div
                  className="c10"
                >
                  <div
                    className="c11"
                    color={[Function]}
                    type="secondary"
                  >
                    <div
                      className="c25 c4"
                      success={true}
                    >
                      <div
                        className="c13"
                      >
                        <span
                          className="c11"
                        >
                          <button
                            absolutePositioning={true}
                            aria-expanded="false"
                            aria-haspopup="listbox"
                            className="c20"
                            onClick={[Function]}
                            tabIndex={0}
                          >
                            <div
                              aria-hidden="true"
                              style={
                                Object {
                                  "flex": 1,
                                }
                              }
                            >
                              <div
                                className="c15"
                              >
                                Select account
                              </div>
                            </div>
                          </button>
                          <div
                            className="c16"
                          >
                            Select account
                          </div>
                        </span>
                      </div>
                      <svg
                        aria-hidden="true"
                        className="c17 c18"
                        focusable="false"
                        preserveAspectRatio="xMidYMid meet"
                        role="presentation"
                        size={5}
                        viewBox="0 0 24 24"
                      >
                        <polygon
                          points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </label>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules | Input / Select 🚧 Multiselect (WIP, don't use for now) 1`] = `
.c13 {
  padding-left: 8px;
  padding-right: 32px;
}

.c4 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c7 {
  box-sizing: border-box;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
}

.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c10 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c14 {
  position: absolute;
  height: 1px;
  width: 1px;
  overflow: hidden;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

.c16 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 20px;
  height: 20px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c6 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c8 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c2 {
  width: 200px;
  display: inline-block;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
}

.c9 {
  position: relative;
  height: 40px;
  box-sizing: border-box;
  border: 1px solid #BCBCB6;
  background-color: #ffffff;
  box-shadow: 0 1px 3px rgba(0,0,0,0.03);
  font: inherit;
  font-size: inherit;
  line-height: inherit;
  color: inherit;
}

.c9:focus-within {
  border-color: #0046FF;
}

.c9.focus-within {
  border-color: #0046FF;
}

.c9:hover:not(:focus-within) {
  border-color: #4B4B46;
}

.c5 {
  width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c11 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  background: transparent;
  width: 100%;
  height: 100%;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 0;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  outline: 0;
  padding: 0;
  text-align: initial;
}

.c11,
.c11[type='button'],
.c11[type='reset'],
.c11[type='submit'] {
  -webkit-appearance: button;
}

.c11::-moz-focus-inner,
.c11[type='button']::-moz-focus-inner,
.c11[type='reset']::-moz-focus-inner,
.c11[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c11:-moz-focusring,
.c11[type='button']:-moz-focusring,
.c11[type='reset']:-moz-focusring,
.c11[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c15 {
  -webkit-transform: translateY(-50%) rotate(0);
  -ms-transform: translateY(-50%) rotate(0);
  transform: translateY(-50%) rotate(0);
  -webkit-transform-origin: center center;
  -ms-transform-origin: center center;
  transform-origin: center center;
  -webkit-transition: -webkit-transform 0.16s ease-out;
  -webkit-transition: transform 0.16s ease-out;
  transition: transform 0.16s ease-out;
  position: absolute;
  height: 8px;
  top: 50%;
  right: 4px;
  pointer-events: none;
}

.c0 {
  position: relative;
  display: inline-block;
}

.c12 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <label>
        <div
          className="c3 c4"
        >
          <span
            className="c5 c6"
          >
            User account
            
          </span>
          <div
            className="c7"
          >
            <div
              className="c8"
              color={[Function]}
              type="secondary"
            >
              <div
                className="c9 c1"
              >
                <div
                  className="c10"
                >
                  <span
                    className="c8"
                  >
                    <button
                      absolutePositioning={true}
                      aria-expanded="false"
                      aria-haspopup="listbox"
                      className="c11"
                      onClick={[Function]}
                      tabIndex={0}
                    >
                      <div
                        aria-hidden="true"
                        style={
                          Object {
                            "flex": 1,
                          }
                        }
                      >
                        <div
                          className="c12 c13"
                        >
                          Select account
                        </div>
                      </div>
                    </button>
                    <div
                      className="c14"
                    >
                      Select account
                    </div>
                  </span>
                </div>
                <svg
                  aria-hidden="true"
                  className="c15 c16"
                  focusable="false"
                  preserveAspectRatio="xMidYMid meet"
                  role="presentation"
                  size={5}
                  viewBox="0 0 24 24"
                >
                  <polygon
                    points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </label>
    </div>
  </div>
</div>
`;
